force-app/main/default/objects/Incident_Report__c/fields/Location_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Incident__c</fullName>
    <label>Location of Incident</label>
    <length>255</length>
    <type>Text</type>
</CustomField>