force-app/main/default/objects/Incident_Report__c/fields/Reporter_Information__c.field-meta.xml
<CustomField>
    <fullName>Reporter_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporter Information</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incident_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>