force-app/main/default/objects/Incident_Report__c/fields/Type_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Incident__c</fullName>
    <label>Type of Incident</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abuse</fullName>
            </value>
            <value>
                <fullName>Neglect</fullName>
            </value>
            <value>
                <fullName>Safety Concern</fullName>
            </value>
            <value>
                <fullName>Endangerment</fullName>
            </value>
            <value>
                <fullName>Domestic Violence</fullName>
            </value>
            <value>
                <fullName>Substance Abuse</fullName>
            </value>
            <value>
                <fullName>Child Exploitation</fullName>
            </value>
            <value>
                <fullName>Emotional Abuse</fullName>
            </value>
            <value>
                <fullName>Bullying</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>