force-app/main/default/objects/Incident_Report__c/fields/Witness_Information__c.field-meta.xml
<CustomField>
    <fullName>Witness_Information__c</fullName>
    <label>Witness Information</label>
    <type>TextArea</type>
</CustomField>