force-app/main/default/objects/Incident_Report__c/recordTypes/Neglect_Incident.recordType-meta.xml
<RecordType>
    <fullName>Neglect_Incident</fullName>
    <active>true</active>
    <label>Neglect Incident</label>
</RecordType>